# skia-benchmark

./: .gitignore  CMakeLists.txt  DEPS  README.md  build_vendor  codeformat.sh  gen_mac  sync_deps.sh  update_emsdk.js  update_skia_emscripten.sh  vendor.json
scripts/skia/: build_mac.sh  build_web.js  build_web.sh  build_win.bat  build_win.sh
src/base/: AppHost.cpp  AppHost.h  Bench.cpp  Bench.h
src/benchmark/: ParticleBench.cpp  ParticleBench.h  SolidRectBench.cpp  SolidRectBench.h
src/platform/mac/: AppDelegate.h  AppDelegate.mm  GLWindowContext_mac.h  GLWindowContext_mac.mm  SkiaWindow.h  SkiaWindow.mm  main.mm
src/platform/win/: GLWindowContext_win.cpp  GLWindowContext_win.h  SkiaWindow.cpp  SkiaWindow.h  WGLInterface.cpp  WGLInterface.h  WGLUtil.cpp  WGLUtil.h  main.cpp
src/tools/: Clock.cpp  Clock.h
src/window_context/: DisplayParams.h  GLWindowContext.cpp  GLWindowContext.h  WindowContext.cpp  WindowContext.h
web/: package.json  server.js  tsconfig.json
web/demo/: CMakeLists.txt  benchmark.hash  common.ts  index-st.html  index-st.ts  index.html  index.ts
web/demo/src/: SkiaView.cpp  SkiaView.h  binding.cpp
web/script/: build.web.js  cmake.demo.js  rollup.demo.js  setup.emsdk.js
